--- a/otica/src/componentes/SessaoSobre/SessaoSobre.css
+++ b/otica/src/componentes/SessaoSobre/SessaoSobre.css
@@ -4,4 +4,56 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: #eee9f0;
+    padding: 100px 0;
+}
+.sessao-sobre-agrupada{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px 0 0 0;
+    overflow: hidden;
+    box-sizing: border-box;
+   
+}
+.grupo-imagem-texto{
+    display: flex;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0 0 0;
+    box-sizing: border-box;
+}
+.grupo-imagem-texto .box-img {
+    width: 50%;
+}
+.box-texto{
+    width: 50%;
+    height:307px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    background-color: #fff;  
+    box-shadow: inset 0 0 50px 10px rgb(204, 204, 204);
+}
+.box-texto h3{
+    font-size: 1.8rem;
+    text-align: center;
+    padding: 10px 100px;
+}
+.box-texto p{
+    font-size: 1.2rem;
+    padding: 0 50px;
+    text-align: center;
+}
+.grupo-imagem-texto .box-img img {
+    width: 100%;
+    height: auto;
+    display: flex;
 }
